GNOME Bugzilla – Bug 737616
timedvaluecontrolsource: Add some signals about values changes
Last modified: 2014-10-22 16:10:23 UTC
In order for user to be able to track changes in the value set in GstTimedValueControlSource the following signals have been added: * value-added * value-removed * value-changed To be able to use a GstTimedValue to be marshalled into the signals, the GstTimedValue structure is now registerd as a GBoxed type. New API: ~~~~~~~ * GstTimedValueControlSource::value-added * GstTimedValueControlSource::value-removed * GstTimedValueControlSource::value-added
Created attachment 287395 [details] [review] timedvaluecontrolsource: Add some signals about values changes
Created attachment 287431 [details] [review] Make sure not to held the TimeValueControlSource.lock when emitting signals. Also this actually break the GstControlPoint ABI, I am wondering why this structure is public at all? It is actually usable nowhere and is not in the document for 1.0, to me it has totally been replaced with GstTimedValue and we should just concider that structure internal.
Created attachment 287446 [details] [review] Avoid breaking ABI making GstControlPoint a Boxed type
Review of attachment 287446 [details] [review]: ::: libs/gst/controller/gsttimedvaluecontrolsource.c @@ +344,1 @@ g_sequence_remove (iter); I want g_sequence_steal() @@ +469,3 @@ + /** + * GstTimedValueControlSource::value-changed + * @self: The #GstTimedValueControlSource on which a #GstTimedValue as changed s/as/has/ @@ +484,3 @@ + /** + * GstTimedValueControlSource::value-added + */ also here and below
Created attachment 287516 [details] [review] Update fixing typos > I want a g_sequence_steal Indeed, that would much nicer!
Minor style comment: could we please avoid adding new functions/variable that use a leading underscore for 'local' variables/functions? It's very ugly.
Created attachment 287562 [details] [review] :%s/_signals/gst_timed_value_control_source_signals/g Even though tastes are pretty personnal... I personnaly prefer to have short variable names when possible, and knowing that the variable/function is static only by seeing its name is something I find nice ;)